--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -28,3 +28,16 @@
   letter-spacing: 0.04em;
   text-decoration: underline;
 }
+
+.oral-label {
+  color: #c62828;
+  font-weight: 600;
+}
+
+.home-section {
+  padding-top: 55px;
+}
+
+#about.home-section {
+  padding-top: 110px;
+}
