--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -34,6 +34,20 @@
   font-weight: 600;
 }
 
+.pub-list-item {
+  min-height: 220px;
+}
+
+.pub-image-wrapper {
+  max-width: 160px;
+}
+
+.pub-thumb {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .home-section {
   padding-top: 55px;
 }
