--- a/layouts/partials/views/community/papers.html
+++ b/layouts/partials/views/community/papers.html
@@ -9,8 +9,15 @@
   {{ $do_link = false }}
 {{ end }}
 
-{{ $link := $item.Params.external_link | default $item.RelPermalink }}
+{{ $link := partial "functions/get_publication_link.html" $item }}
+{{ $has_link := ne $link "" }}
 {{ $target := .target }}
+{{ if and $has_link (not $target) }}
+  {{ $link_lower := lower $link }}
+  {{ if or (hasPrefix $link_lower "http://") (hasPrefix $link_lower "https://") (hasPrefix $link "//") }}
+    {{ $target = "target=\"_blank\" rel=\"noopener\"" }}
+  {{ end }}
+{{ end }}
 
 {{/* Get summary. */}}
 {{ $summary := "" }}
@@ -33,12 +40,12 @@
 {{ $order := "order-md-2" }}
 
 <div class="col-lg-12 mb-5 view-showcase">
-  <div class="row align-items-center">
-    <div class="col-12 col-md-6">
+  <div class="row align-items-stretch">
+    <div class="col-12 col-lg-7">
       <div class="section-subheading article-title mb-0 mt-0">
-        {{- if $do_link}}<a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{end -}}
+        {{- if and $do_link $has_link}}<a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{end -}}
         {{ $item.Title | markdownify | emojify }}
-        {{- if $do_link}}</a>{{end -}}
+        {{- if and $do_link $has_link}}</a>{{end -}}
       </div>
       <strong>
       {{ if $item.Params.publication_short }}
@@ -47,6 +54,9 @@
     {{- $item.Params.publication | markdownify -}}
   {{ end }}
   {{ partial "page_presentation_label.html" $item }}.</strong>
+      <div class="pub-authors mb-2">
+        {{ partial "page_metadata_authors" $item }}
+      </div>
       {{ with $summary }}
       <div class="article-style">
         {{ . }}
@@ -58,18 +68,20 @@
       </div>
 
     </div>
-    <div class="col-12 col-md-6 order-first {{$order}}">
+    <div class="col-12 col-lg-5 order-first {{$order}} d-flex align-items-center justify-content-end">
       {{ $resource := partial "functions/get_featured_image.html" $item }}
 
       {{ with $resource }}
         {{/* Use CSS to expand images to consistent widths rather than just Hugo as Hugo can significantly increase the
         filesize of GIFs when processing them, e.g. 400kB --> 1.5MB */}}
         {{ $image := . }}
-        {{ if ne $image.MediaType.SubType "gif" }}{{ $image = $image.Process "resize 540x webp" }}{{ end }}
-        {{if $do_link}}<a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{end}}
-          <img src="{{ $image.RelPermalink }}" height="{{ $image.Height }}" width="{{ $image.Width }}"
-              alt="{{ $item.Title }}" loading="lazy" style="width: 540px; height: auto; object-fit: cover;">
-        {{if $do_link}}</a>{{end}}
+        {{ if ne $image.MediaType.SubType "gif" }}{{ $image = $image.Process "fit 720x540 webp" }}{{ end }}
+        <div class="home-pub-image w-100 h-100 d-flex justify-content-end">
+          {{if and $do_link $has_link}}<a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{end}}
+            <img src="{{ $image.RelPermalink }}" height="{{ $image.Height }}" width="{{ $image.Width }}"
+                alt="{{ $item.Title }}" loading="lazy" class="home-pub-thumb">
+          {{if and $do_link $has_link}}</a>{{end}}
+        </div>
       {{end}}
     </div>
   </div>
