--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -39,7 +39,9 @@
 }
 
 .pub-image-wrapper {
-  max-width: 160px;
+  max-width: 280px;
+  width: 100%;
+  height: 100%;
 }
 
 .pub-thumb {
@@ -48,8 +50,34 @@
   object-fit: cover;
 }
 
+.home-pub-thumb {
+  max-width: 100%;
+  width: auto;
+  height: auto;
+  max-height: 360px;
+  object-fit: contain;
+}
+
+.home-pub-image {
+  max-width: 360px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
 .home-section {
   padding-top: 55px;
+}
+
+#about.home-section + .home-section .section-heading,
+#about.home-section + .home-section .section-subheading {
+  margin-bottom: 0.75rem;
+}
+
+.home-section:not(#about) .section-heading,
+.home-section:not(#about) .section-subheading {
+  margin-bottom: 2.25rem;
 }
 
 #about.home-section {
