--- a/layouts/partials/views/citation.html
+++ b/layouts/partials/views/citation.html
@@ -1,5 +1,14 @@
 {{ $item := .item }}
 {{ $has_attachments := partial "functions/has_attachments" $item }}
+{{ $link := partial "functions/get_publication_link.html" $item }}
+{{ $has_link := ne $link "" }}
+{{ $target := "" }}
+{{ if $has_link }}
+  {{ $link_lower := lower $link }}
+  {{ if or (hasPrefix $link_lower "http://") (hasPrefix $link_lower "https://") (hasPrefix $link "//") }}
+    {{ $target = "target=\"_blank\" rel=\"noopener\"" }}
+  {{ end }}
+{{ end }}
 
 <div class="pub-list-item view-citation" style="margin-bottom: 1rem">
   <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
@@ -11,7 +20,7 @@
     {{ partial "page_metadata_authors" $item }}
   </span>
   ({{- $item.Date.Format "2006" -}}).
-  <a href="{{ $item.RelPermalink }}">{{ $item.Title }}</a>.
+  {{ if $has_link }}<a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{ end }}{{ $item.Title }}{{ if $has_link }}</a>{{ end }}.
   {{ if $item.Params.publication_short }}
     {{- $item.Params.publication_short | markdownify -}}
   {{ else if $item.Params.publication }}
@@ -26,7 +35,7 @@
   <span class="article-metadata li-cite-author">
     {{ partial "page_metadata_authors" $item }}.
   </span>
-  <a href="{{ $item.RelPermalink }}">{{ $item.Title }}</a>.
+  {{ if $has_link }}<a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{ end }}{{ $item.Title }}{{ if $has_link }}</a>{{ end }}.
   {{ if $item.Params.publication_short }}
     {{- $item.Params.publication_short | markdownify -}}
   {{ else if $item.Params.publication }}
