--- a/layouts/partials/views/publication-list.html
+++ b/layouts/partials/views/publication-list.html
@@ -1,9 +1,16 @@
 {{ $item := .item }}
-{{ $link := $item.RelPermalink }}
+{{ $link := partial "functions/get_publication_link.html" $item }}
+{{ $has_link := ne $link "" }}
+{{ $link_lower := lower $link }}
+{{ $is_external := or (hasPrefix $link_lower "http://") (hasPrefix $link_lower "https://") (hasPrefix $link "//") }}
+{{ $target := "" }}
+{{ if and $has_link $is_external }}
+  {{ $target = "target=\"_blank\" rel=\"noopener\"" }}
+{{ end }}
 {{ $resource := partial "functions/get_featured_image.html" $item }}
 
 <div class="row align-items-stretch g-3 pub-list-item mb-4">
-  <div class="col-md-10 d-flex flex-column h-100">
+  <div class="col-lg-9 col-md-8 d-flex flex-column h-100">
     {{ $venue := "" }}
     {{ if $item.Params.publication_short }}
       {{ $venue = $item.Params.publication_short | markdownify | plainify }}
@@ -19,7 +26,9 @@
     </div>
 
     <div class="pub-title h5 mb-1">
-      <a href="{{ $link }}">{{ $item.Title | markdownify | emojify }}</a>
+      {{ if $has_link }}<a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{ end }}
+      {{ $item.Title | markdownify | emojify }}
+      {{ if $has_link }}</a>{{ end }}
     </div>
 
     <div class="pub-authors mb-2">
@@ -31,17 +40,17 @@
     </div>
   </div>
 
-  <div class="col-md-2 col-6 offset-md-0 offset-3 text-md-end text-center h-100 d-flex justify-content-md-end justify-content-center">
+  <div class="col-lg-3 col-md-4 col-6 offset-md-0 offset-3 text-md-end text-center h-100 d-flex justify-content-md-end justify-content-center">
     {{ with $resource }}
       <div class="pub-image-wrapper h-100 d-flex align-items-center justify-content-center justify-content-md-end w-100">
         {{ $image := . }}
         {{ if ne $image.MediaType.SubType "gif" }}
-          {{ $image = $image.Process "fill 320x200 webp" }}
+          {{ $image = $image.Process "fill 380x260 webp" }}
         {{ end }}
-        <a href="{{ $link }}">
+        {{ if $has_link }}<a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{ end }}
           <img src="{{ $image.RelPermalink }}" width="{{ $image.Width }}" height="{{ $image.Height }}"
             class="pub-thumb rounded" alt="{{ $item.Title }}" loading="lazy">
-        </a>
+        {{ if $has_link }}</a>{{ end }}
       </div>
     {{ end }}
   </div>
